--- a/Maquette/StoryHeroes/index.html
+++ b/Maquette/StoryHeroes/index.html
@@ -18,17 +18,11 @@
 
 
 
-    <div class="container-fluid">
-        <div class="navbar">
-            <a class="navbar-brand" href="/">Maquette Story-Heroes</a>
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <a href="squelette.html">Squelette de l'app</a>
-                </li>
-                <li>
-                    <a href="catalogue.html">Page Catalogue</a>
-                </li>
-            </ul>
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Maquettes des différents écran de Story Heroes</h1>
+            <a href="squelette.html"><button class="btn bg-primary">Page "Catalogue"</button> </a>
+
         </div>
     </div>
 
