--- a/Maquette/GoTrain/index.html
+++ b/Maquette/GoTrain/index.html
@@ -21,7 +21,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1>Maquettes des différents écran de Go TRAIN</h1>
-            <a href="squelette.html"><button class="btn bg-primary">Page "Catalogue"</button> </a>
+            <a href="50.html"><button class="btn bg-primary">Page "50_AppSport_TrainPage"</button> </a>
 
         </div>
     </div>
