--- a/Maquette/GoTrain/50.html
+++ b/Maquette/GoTrain/50.html
@@ -13,9 +13,12 @@
     <title>Maquette | GO TRAIN</title>
 </head>
 
-<body>
+<body class="ml-0 mr-0 m-auto screen-iphone8">
 
-    <h1>Hello World!</h1>
+    <div class="container-fluid full-height bg-dark">
+
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
