--- a/Maquette/GoTrain/50.html
+++ b/Maquette/GoTrain/50.html
@@ -17,6 +17,64 @@
 
     <div class="container-fluid full-height bg-dark">
 
+        <div class="progress-bar"></div>
+
+        <div class="exercise">
+            <div class="font-main title bold">
+                Développé couché
+            </div>
+            <div class="font-second subtitle">
+                Répétitions : 10 - 15
+            </div>
+        </div>
+
+        <div class="container-player">
+            <div class="nav-arrow left"></div>
+            <div class="circle btn-play"></div>
+            <div class="nav-arrow right"></div>
+        </div>
+
+        <div class="panel bg-second">
+            <div class="top row">
+                <div class="font-link col-4">Voir programme</div>
+                <div class="col-8">
+                    <span class="text-uppercase">charge</span>
+                    <button class="btn bg-dark text-white text-center">80 kg - OK</button>
+                    <button class="btn bg-dark fail-icon">x</button>
+                </div>
+            </div>
+            <div class="text-center text-uppercase">Répétitions validées</div>
+            <div class="row">
+                <button class="btn bg-dark text-white text-center">10</button>
+                <button class="btn bg-dark text-white text-center">11</button>
+                <button class="btn bg-dark text-white text-center">12</button>
+                <button class="btn bg-dark text-white text-center">13</button>
+                <button class="btn bg-dark text-white text-center">14</button>
+                <button class="btn bg-dark text-white text-center">15</button>
+            </div>
+        </div>
+
+        <div class="chrono">
+            <div class="row">
+                <div class="rest-min col-6">
+                    <div class="text-uppercase">récup min</div>
+                    <button class="btn bg-dark text-white text-center">02:00</button>
+                </div>
+                <div class="rest-min col-6">
+                    <div class="text-uppercase">récup max</div>
+                    <button class="btn bg-dark text-white text-center">02:30</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="real-chrono text-white text-center bold">02 : 00</div>
+            </div>
+        </div>
+
+        <div class="btn-menu"></div>
+
+
+
+
     </div>
 
 
