--- a/Maquette/GoTrain/50.html
+++ b/Maquette/GoTrain/50.html
@@ -13,7 +13,7 @@
     <title>Maquette | GO TRAIN</title>
 </head>
 
-<body class="ml-0 mr-0 m-auto screen-iphone8">
+<body class="full-height">
 
     <div class="container-fluid full-height bg-dark">
 
@@ -28,10 +28,12 @@
             </div>
         </div>
 
-        <div class="container-player">
-            <div class="nav-arrow left"></div>
-            <div class="circle btn-play"></div>
-            <div class="nav-arrow right"></div>
+        <div class="container-player row">
+            <div class="nav-arrow left col-3"></div>
+            <div class="circle col-6">
+                <div class="btn-play"></div>
+            </div>
+            <div class="nav-arrow right col-3"></div>
         </div>
 
         <div class="panel bg-second">
