--- a/Maquette/GoTrain/50.html
+++ b/Maquette/GoTrain/50.html
@@ -13,13 +13,13 @@
     <title>Maquette | GO TRAIN</title>
 </head>
 
-<body class="full-height">
+<body>
 
-    <div class="container-fluid full-height bg-dark">
 
-        <div class="progress-bar"></div>
+    <div class="container full-height bg-dark">
+        <div class="row bar"></div>
 
-        <div class="exercise">
+        <div class="exercise text-center">
             <div class="font-main title bold">
                 Développé couché
             </div>
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-        <div class="container-player row">
+        <div class="container-player row mb-4">
             <div class="nav-arrow left col-3"></div>
             <div class="circle col-6">
                 <div class="btn-play"></div>
@@ -37,16 +37,17 @@
         </div>
 
         <div class="panel bg-second">
-            <div class="top row">
-                <div class="font-link col-4">Voir programme</div>
+            <div class="top row mb-3 pt-2">
+                <div class="font-link col-3 pr-1">Voir programme</div>
+                <div class="col-1"></div>
                 <div class="col-8">
                     <span class="text-uppercase">charge</span>
                     <button class="btn bg-dark text-white text-center">80 kg - OK</button>
                     <button class="btn bg-dark fail-icon">x</button>
                 </div>
             </div>
-            <div class="text-center text-uppercase">Répétitions validées</div>
-            <div class="row">
+            <div class="text-center text-uppercase pb-1">Répétitions validées</div>
+            <div class="pb-2 d-flex justify-content-around">
                 <button class="btn bg-dark text-white text-center">10</button>
                 <button class="btn bg-dark text-white text-center">11</button>
                 <button class="btn bg-dark text-white text-center">12</button>
