--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="section-heading text-white">Nicolas BOUVEYRON</h2>
-                    <h2 class="section-heading text-white">Étudiant BTS SIO Option SLAM</h2>
+                    <h2 class="section-heading text-white">Alternant Développeur FullStack</h2>
                     <hr class="light my-4">
                     <p class="text-faded mb-4">
                         Je suis actuellement une formation certifiante à l'IPI (<span style="color: #e17055;">I</span>nstitut <span style="color: #e17055;">P</span>oly <span style="color: #e17055;">I</span>nformatique) de niveau 6 inscrit au registre
