Update style link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <hr class="light my-4">
                     <p class="text-faded mb-4">
                         Fraichement diplomé d'une certication de Développeur FullStack de niveau 6 (Bac +3), je recherche une opportunitée de m'épanouir sur un poste de développeur web.
-                        Je possède une année d'expérience en tant qu'alternant au sein de <a href="https://www.soprasteria.com/fr">Sopra Steria</a>, ce qui m'a permis d'acquérir un esprit d'analyse durant ma mission de TMA sur le SI du parc applicatif de la Région AURA
+                        Je possède une année d'expérience en tant qu'alternant au sein de <a class="light-color-link" href="https://www.soprasteria.com/fr">Sopra Steria</a>, ce qui m'a permis d'acquérir un esprit d'analyse durant ma mission de TMA sur le SI du parc applicatif de la Région AURA
                     </p>
                     <a class="btn btn-light btn-xl js-scroll-trigger" href="file/cv.pdf">Voir mon CV !</a>
                 </div>
@@ -309,7 +309,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
